condense navigation items into one menu

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,16 +3,16 @@
     <div class="nav-brand">
       <h2>Portfolio</h2>
     </div>
-    <p-menubar [model]="items" class="custom-menubar">
-      <ng-template pTemplate="end">
-        <p-button 
-          label="Download CV" 
-          icon="pi pi-download" 
-          size="small"
-          severity="secondary"
-          [outlined]="true">
-        </p-button>
-      </ng-template>
-    </p-menubar>
+    <div class="nav-menu">
+      <p-megaMenu [model]="items" class="custom-megamenu"></p-megaMenu>
+      <p-button 
+        label="Download CV" 
+        icon="pi pi-download" 
+        size="small"
+        severity="secondary"
+        [outlined]="true"
+        class="cv-button">
+      </p-button>
+    </div>
   </div>
 </header>
