--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -70,7 +70,7 @@
             <div class="responsibilities-section" *ngIf="experience.responsibilities.length > 0">
               <h4>Key Responsibilities</h4>
               <ul class="responsibilities-list">
-                <li *ngFor="let responsibility of experience.responsibilities.slice(0, 3)">
+                <li *ngFor="let responsibility of experience.responsibilities">
                   {{ responsibility }}
                 </li>
               </ul>
@@ -80,7 +80,7 @@
               <h4>Key Achievements</h4>
               <div class="achievements-list">
                 <p-chip 
-                  *ngFor="let achievement of experience.achievements.slice(0, 3)" 
+                  *ngFor="let achievement of experience.achievements" 
                   [label]="achievement"
                   icon="pi pi-star"
                   class="achievement-chip">
