--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container">
     <div class="nav-brand">
-      <h2>Portfolio</h2>
+      <h2>Luis Fábregas-Ibáñez</h2>
     </div>
     <div class="nav-menu">
       <p-megaMenu [model]="items" class="custom-megamenu"></p-megaMenu>
@@ -9,7 +9,7 @@
         label="Download CV" 
         icon="pi pi-download" 
         size="small"
-        severity="secondary"
+        severity="primary"
         [outlined]="true"
         class="cv-button">
       </p-button>
