--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -12,9 +12,15 @@
     z-index: 2;
   }
 
+  .profile-picture {
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px solid #3b82f6;
+  }
+  
   .hero-content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: .25fr 1fr;
     gap: 4rem;
     align-items: center;
   }
